--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
 			<div>
 				<ul class="nav navbar-nav navbar-center">
 					<li class="active"><a href="#">Sweet Home</a></li>
-					<li><a href="Life">Our Life</a></li>
-					<li><a href="#">Our Footprint</a></li>
+					<li><a href="#/life">Our Life</a></li>
+					<li><a href="#/footprint">Our Footprint</a></li>
 					<li><a href="#">About us</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
@@ -30,27 +30,7 @@
 			</div>
 		</div>
 	</nav>
-	<div style="position:relative">
-		<div  ng-controller="homeCtrl">
-			<div class="camera_wrap camera_azure_skin" id="camera_wrap_1" camSlider >
-				<div ng-repeat="img in imagesource" data-thumb="{{img.datathumb}}" data-src="{{img.datasrc}}">
-					<div class="camera_caption fadeFromBottom">
-						See how cool the family is!
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- <div style="width:100%" ng-view></div> -->
-	</div>
 
-	<script type="text/javascript">
-		jQuery(function () {
-			jQuery('#camera_wrap_1').camera({
-				time: 1000,
-				transPeriod: 1000,
-				height: '500px',
-			});
-		});
-	</script>
+	<div style="width:100%;position:relative" ng-view></div>
 </body>
 </html>
