--- a/pages/intro.html
+++ b/pages/intro.html
@@ -1,18 +1,10 @@
-	<div>
-		<div class="camera_wrap camera_azure_skin" id="camera_wrap_1" ng-repeat="img in imagesource">
-			<div data-thumb={{img.datathumb}} data-src={{img.datasrc}}>
-				<div class="camera_caption fadeFromBottom">
-					See how cool the family is!
+	<div class="camera_wrap camera_azure_skin" id="camera_wrap_1" camslider >
+			<div ng-repeat="img in imagesource" data-thumb="{{img.datathumb}}" data-src="{{img.datasrc}}">
+				<div class="camera_caption fadefrombottom">
+					see how cool the family is!
 				</div>
 			</div>
-		</div><!-- #camera_wrap_1 -->
 	</div>
-	<script>
-		jQuery(function () {
-			jQuery('#camera_wrap_1').camera({
-				time: 1000,
-				transPeriod: 1000,
-				height: '600px',
-			});
-		});
-	</script>
+<!-- 	<div ng-repeat="img in imagesource">
+		{{img.datathumb}}
+	</div> -->
