--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel='stylesheet' id='camera-css' href='./css/camera.css' type='text/css' media='all'> 
 	<link rel='stylesheet' id='camera-css' href='./css/bootstrap.min.css' type='text/css' media='all'> 
+	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=3p1Wl37n5VGpWgbU3RtGgrfL"></script>
 	<script type='text/javascript' src="./js/angular.min.js"></script>
 	<script type='text/javascript' src="./js/angular-route.min.js"></script>
 	<script type='text/javascript' src="./js/app.js"></script>
