--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 	<script type='text/javascript' src='./js/camera.min.js'></script>
 	<title>Zhigao's Home</title>
 </head>
-<body>
+<body  style="background-color:#E2F1D0">
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -31,7 +31,7 @@
 			</div>
 		</div>
 	</nav>
-
-	<div style="width:100%;position:relative" ng-view></div>
+	<div style="width:90%;position:relative; margin: 0 auto;" ng-view></div>
+	<p style="padding-top:20px"></p>
 </body>
 </html>
