--- a/pages/intro.html
+++ b/pages/intro.html
@@ -1,10 +1,19 @@
-	<div class="camera_wrap camera_azure_skin" id="camera_wrap_1" camslider >
+	
+	<div class="camera_wrap camera_azure_skin" id="camera_wrap_1" camslider  >
 			<div ng-repeat="img in imagesource" data-thumb="{{img.datathumb}}" data-src="{{img.datasrc}}">
 				<div class="camera_caption fadefrombottom">
 					see how cool the family is!
 				</div>
 			</div>
 	</div>
-<!-- 	<div ng-repeat="img in imagesource">
-		{{img.datathumb}}
-	</div> -->
+	
+    <div class="row">
+        <div class="col-md-8" >
+        		<div style="border-radius: 20px/20px;background: #A8DC3C; height: 500px;" > 
+        		<img src="../images/welcome.gif" style="width:200px; height: 50px; padding-left: 20px; padding-top: 10px"></img>
+        		</div>
+		</div>
+        <div class="col-md-4" >
+        	<div style="border-radius: 20px/20px;background: #B9D998; height: 500px;" >  </div>
+        </div>
+     </div>
