--- a/home.html
+++ b/home.html
@@ -3,13 +3,16 @@
 <head>
 	<link rel='stylesheet' id='camera-css' href='./css/camera.css' type='text/css' media='all'> 
 	<link rel='stylesheet' id='camera-css' href='./css/bootstrap.min.css' type='text/css' media='all'> 
+	<link rel="stylesheet" type="text/css" href="./css/cntl.min.css">
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=3p1Wl37n5VGpWgbU3RtGgrfL"></script>
 	<script type='text/javascript' src="./js/angular.min.js"></script>
 	<script type='text/javascript' src="./js/angular-route.min.js"></script>
 	<script type='text/javascript' src="./js/app.js"></script>
 	<script type='text/javascript' src='./js/jquery-1.8.2.min.js'></script>
+		<script type="text/javascript" src="./js/jquery.cntl.min.js"></script>  
 	<script type='text/javascript' src='./js/jquery.easing.1.3.js'></script>
 	<script type='text/javascript' src='./js/camera.min.js'></script>
+
 	<title>Zhigao's Home</title>
 </head>
 <body  style="background-color:#E2F1D0">
@@ -23,7 +26,7 @@
 					<li class="active"><a href="#">Sweet Home</a></li>
 					<li><a href="#/life">Our Life</a></li>
 					<li><a href="#/footprint">Our Footprint</a></li>
-					<li><a href="#">About us</a></li>
+					<li><a href="#/about">About us</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#"><span class="glyphicon glyphicon-user"></span>Contact us</a></li>
