--- a/home.html
+++ b/home.html
@@ -9,9 +9,10 @@
 	<script type='text/javascript' src="./js/angular-route.min.js"></script>
 	<script type='text/javascript' src="./js/app.js"></script>
 	<script type='text/javascript' src='./js/jquery-1.8.2.min.js'></script>
-		<script type="text/javascript" src="./js/jquery.cntl.min.js"></script>  
+	<script type="text/javascript" src="./js/jquery.cntl.min.js"></script>  
 	<script type='text/javascript' src='./js/jquery.easing.1.3.js'></script>
 	<script type='text/javascript' src='./js/camera.min.js'></script>
+	<script type="text/javascript" src="../js/jquery.maphilight.js"></script>
 
 	<title>Zhigao's Home</title>
 </head>
@@ -24,9 +25,9 @@
 			<div>
 				<ul class="nav navbar-nav navbar-center">
 					<li class="active"><a href="#">Sweet Home</a></li>
-					<li><a href="#/life">Our Life</a></li>
+					<li><a href="#/stories">Our Stories</a></li>
 					<li><a href="#/footprint">Our Footprint</a></li>
-					<li><a href="#/about">About us</a></li>
+					<li><a href="#/familytree">Family Tree</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#"><span class="glyphicon glyphicon-user"></span>Contact us</a></li>
