replace with family pictures

--- a/home.html
+++ b/home.html
@@ -13,10 +13,9 @@
 	<script type='text/javascript' src='./js/jquery.easing.1.3.js'></script>
 	<script type='text/javascript' src='./js/camera.min.js'></script>
 	<script type="text/javascript" src="../js/jquery.maphilight.js"></script>
-
 	<title>Zhigao's Home</title>
 </head>
-<body  style="background-color:#E2F1D0">
+<body  style="background-color:#E2F1D0;">
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -35,7 +34,7 @@
 			</div>
 		</div>
 	</nav>
-	<div style="width:90%;position:relative; margin: 0 auto;" ng-view></div>
+	<div style="width:80%; height: auto; position:relative; margin: 0 auto;" ng-view></div>
 	<p style="padding-top:20px"></p>
 </body>
 </html>
