--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
 			</div>
 		</div>
 	</nav>
-	<div style="width:80%; height: auto; position:relative; margin: 0 auto;" ng-view></div>
+	<div style="width:1200px; height: auto; position:relative; margin: 0 auto;" ng-view></div>
 	<p style="padding-top:20px"></p>
 </body>
 </html>
