add baidu map event handler

--- a/pages/footprint.html
+++ b/pages/footprint.html
@@ -16,7 +16,7 @@
 	<div class="col-md-4" >
 		<div style="border-radius: 20px/20px;background: #B9D998; height: 500px;" > 
 			<p style="padding: 20px">
-				The story at this place.
+				{{description}}
 			</p>
 			
 		</div>
