support updating slide after clicking location

--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=3p1Wl37n5VGpWgbU3RtGgrfL"></script>
 	<script type='text/javascript' src="./js/angular.min.js"></script>
 	<script type='text/javascript' src="./js/angular-route.min.js"></script>
+	<script type='text/javascript' src="./js/angular-sanitize.min.js"></script>
 	<script type='text/javascript' src="./js/app.js"></script>
 	<script type='text/javascript' src='./js/jquery-1.8.2.min.js'></script>
 	<script type="text/javascript" src="./js/jquery.cntl.min.js"></script>  
