create family tree image

--- a/pages/stories.html
+++ b/pages/stories.html
@@ -10,6 +10,7 @@
 						<h4>Title 1</h4>
 						<p>Story 1</p>
 					</div>
+					<div class="cntl-image"><img src="./images/timeline/1.png"></div>
 					<div class="cntl-icon cntl-center">'00</div>
 				</div>
 
@@ -21,7 +22,7 @@
 						</p>
 					</div>
 
-					<div class="cntl-image"><img src="./images/timeline/1.jpg"></div>
+					<div class="cntl-image"><img src="./images/timeline/2.png"></div>
 					<div class="cntl-icon cntl-center">'03</div>
 				</div>
 
@@ -33,7 +34,7 @@
 						</p>
 					</div>
 
-					<div class="cntl-image"><img src="./images/timeline/2.jpg"></div>
+					<div class="cntl-image"><img src="./images/timeline/3.png"></div>
 					<div class="cntl-icon cntl-center">'04</div>
 				</div>
 
@@ -45,7 +46,7 @@
 						</p>
 					</div>
 
-					<div class="cntl-image"><img src="./images/timeline/3.jpg"></div>
+					<div class="cntl-image"><img src="./images/timeline/5.png"></div>
 					<div class="cntl-icon cntl-center">'07</div>
 				</div>
 
@@ -57,7 +58,7 @@
 						</p>
 					</div>
 
-					<div class="cntl-image"><img src="./images/timeline/4.jpg"></div>
+					<div class="cntl-image"><img src="./images/timeline/6.png"></div>
 					<div class="cntl-icon cntl-center">'10</div>
 				</div>
 			</div>
