--- a/pages/intro.html
+++ b/pages/intro.html
@@ -1,16 +1,20 @@
 
-  <div class="row">
-    <div class="col-md-8" >
-    		<div style="border-radius: 20px/20px;background: #B9D998; height: 400px;" > 
+<div class="row" style="position:relative; margin: 0 auto;">
+	<img src="../images/topbanner.png" style="width: 1200px;"></img>
+</div> 
+  <div class="row" style="margin-top: 10px; margin-left: 0px; margin-right: 0px">
+    <div class="col-md-8" style="padding-right:5; padding-left:0;" >
+    		<div style="border-radius: 10px/10px;background: #B9D998; height: 600px; " > 
     		<img src="../images/welcome.gif" style="width:200px; height: 50px; padding-left: 20px; padding-top: 10px"></img>
     		</div>
 	</div>
-    <div class="col-md-4" >
-    	<div style="border-radius: 20px/20px;background: #B9D998; height: 400px;" >  </div>
+    <div class="col-md-4" style="padding-right:0; padding-left:0;" >
+    	<div style="border-radius: 10px/10px;background: #B9D998; height: 295px; margin-bottom:10px" >  </div>
+    	<div style="border-radius: 10px/10px;background: #B9D998; height: 295px;">  </div>
     </div>
  </div>
 
-<div style="border-radius: 20px/20px;background: #A8DC3C; height: 700px; margin-top: 20px" > 
+<div style="border-radius: 10px/10px;background: #A8DC3C; height: 700px; margin-top: 10px" > 
 	<div class="camera_wrap camera_azure_skin" id="camera_wrap_1" camslider style="padding-top: 20px;">
 			<div ng-repeat="img in imagesource" data-thumb="{{img.datathumb}}" data-src="{{img.datasrc}}">
 				<div class="camera_caption fadefrombottom">
