add welcome page content

--- a/pages/intro.html
+++ b/pages/intro.html
@@ -2,26 +2,73 @@
 <div class="row" style="position:relative; margin: 0 auto;">
 	<img src="../images/topbanner.png" style="width: 1200px;"></img>
 </div> 
-  <div class="row" style="margin-top: 10px; margin-left: 0px; margin-right: 0px">
-    <div class="col-md-8" style="padding-right:5; padding-left:0;" >
-    		<div style="border-radius: 10px/10px;background: #B9D998; height: 600px; " > 
-    		<img src="../images/welcome.gif" style="width:200px; height: 50px; padding-left: 20px; padding-top: 10px"></img>
-    		</div>
+<div class="row" style="margin-top: 10px; margin-left: 0px; margin-right: 0px">
+	<div class="col-md-8" style="padding-right:5; padding-left:0;" >
+		<div style="border-radius: 10px/10px;background: #B9D998; height: 600px; " > 
+			<div style="padding-left: 10px; padding-right: 10px; ">
+				<h2 style="padding-top: 10px;">Welcome</h2>
+				<hr style="margin-top: -5px;" />
+				<p>
+					Welcome to Zhigao's family home page!
+				</p>
+				<p>
+					We are the small family with three members: the father, the mother and the cutest son int he world. This site records some of the important moments of the family - something we'd like to share and would expect you to enjoy. 
+				</p>
+
+				<p>
+					Hope from these site, you can get to know us, and feel our life. We're normal, just like millions of Chinease families, yet we are also unique, as the only Zhigao's family in the world.
+				</p>
+				<p>
+					PS. This site achieved two of Zhigao's objectives of year 2015: 1) create a family site; 2) practice one technology learned this year - guess what technology it is:-). 
+				</p>
+			</div>	
+
+			<div style="padding-left: 10px; padding-right: 10px; ">
+				<h2 style="padding-top: 10px;">What's in the site?</h2>
+				<hr style="margin-top: -5px;" />
+				<p>
+					You'll find different things in different pages, and we expect you're interested in some of them.
+				</p>
+				<p>
+					The <a href="#">Home</a> page is what you're seeing now. Let's call it the entry of the site:-). 				
+				</p>
+				<p>
+					The <a href="#/stories">Story</a> page shows our stories along the timeline. only the important moments and family milestones are shown in the page, though there are so many to be remembered. 				
+				</p>
+				<p>
+					The <a href="#/footprint">Footprint</a> page records our footprints around the world, either as a family or as an indiviual. Travelling is something the famliy would like to do. We're trying our best to have at least one trip every year.  
+				</p>
+
+				<p>
+					The <a href="#/familytree">Family Tree</a> page tells you how and where the family come from. Both the grandpas and grandmas are pesents, and worked hard for their whole life, even today. We are proud of them, and proud of being their children.
+				</p>
+			</div>	
+
+		</div>
 	</div>
-    <div class="col-md-4" style="padding-right:0; padding-left:0;" >
-    	<div style="border-radius: 10px/10px;background: #B9D998; height: 295px; margin-bottom:10px" >  </div>
-    	<div style="border-radius: 10px/10px;background: #B9D998; height: 295px;">  </div>
-    </div>
- </div>
+	<div class="col-md-4" style="padding-right:0; padding-left:0;" >
+		<div style="border-radius: 10px/10px;background: #B9D998; height: 295px; margin-bottom:10px" > 
+			<div style="padding-left: 10px; padding-right: 10px; ">
+				<h2 style="padding-top: 10px;">Coming event</h2>
+				<hr style="margin-top: -5px;" />
+			</div>
+		</div>
+		<div style="border-radius: 10px/10px;background: #B9D998; height: 295px;">  
+			<div style="padding-left: 10px; padding-right: 10px; ">
+				<h2 style="padding-top: 10px;">Our thoughts</h2>
+				<hr style="margin-top: -5px;" />
+			</div>
+		</div>	
+	</div>
+</div>
 
 <div style="border-radius: 10px/10px;background: #A8DC3C; height: 700px; margin-top: 10px" > 
 	<div class="camera_wrap camera_azure_skin" id="camera_wrap_1" camslider style="padding-top: 20px;">
-			<div ng-repeat="img in imagesource" data-thumb="{{img.datathumb}}" data-src="{{img.datasrc}}">
-				<div class="camera_caption fadefrombottom">
-					see how cool the family is!
-				</div>
+		<div ng-repeat="img in imagesource" data-thumb="{{img.datathumb}}" data-src="{{img.datasrc}}">
+			<div class="camera_caption fadefrombottom">
+				see how cool the family is!
 			</div>
+		</div>
 	</div>
 </div>	
-	
- 
+
