add more content for timeline

--- a/pages/stories.html
+++ b/pages/stories.html
@@ -1,65 +1,136 @@
 	<div class="cntl" timeline>
-			<span class="cntl-bar cntl-center">
-				<span class="cntl-bar-fill"></span>
-			</span>
+		<span class="cntl-bar cntl-center">
+			<span class="cntl-bar-fill"></span>
+		</span>
 
-			<div class="cntl-states">
+		<div class="cntl-states">
 
-				<div class="cntl-state">
-					<div class="cntl-content">
-						<h4>Title 1</h4>
-						<p>Story 1</p>
-					</div>
-					<div class="cntl-image"><img src="./images/timeline/1.png"></div>
-					<div class="cntl-icon cntl-center">'00</div>
+			<div class="cntl-state">
+				<div class="cntl-content">
+					<h4>We met</h4>
+					<p>We met, in year 2000. This is a trip to Wuling Mountain with the room mates. First tour we took together outside Beijing - in fact, just on the border of Beijing:-). We look so young on this old picture!</p>
+					<p>
+						The same year, we had a trip to Cheng De, too. This is the farest place I've been as tourist during my Bechelor time.
+					</p>
 				</div>
-
-				<div class="cntl-state">
-					<div class="cntl-content">
-						<h4>Title 2</h4>
-						<p>
-						Story 2
-						</p>
-					</div>
-
-					<div class="cntl-image"><img src="./images/timeline/2.png"></div>
-					<div class="cntl-icon cntl-center">'03</div>
-				</div>
-
-				<div class="cntl-state">
-					<div class="cntl-content">
-						<h4>Title 3</h4>
-						<p>
-							Story 3
-						</p>
-					</div>
-
-					<div class="cntl-image"><img src="./images/timeline/3.png"></div>
-					<div class="cntl-icon cntl-center">'04</div>
-				</div>
-
-				<div class="cntl-state">
-					<div class="cntl-content">
-						<h4>Title 4</h4>
-						<p>
-						Story 4
-						</p>
-					</div>
-
-					<div class="cntl-image"><img src="./images/timeline/5.png"></div>
-					<div class="cntl-icon cntl-center">'07</div>
-				</div>
-
-				<div class="cntl-state">
-					<div class="cntl-content">
-						<h4>Title 5</h4>
-						<p>
-						Story 5
-						</p>
-					</div>
-
-					<div class="cntl-image"><img src="./images/timeline/6.png"></div>
-					<div class="cntl-icon cntl-center">'10</div>
-				</div>
+				<div class="cntl-image"><img src="./images/timeline/1.png"></div>
+				<div class="cntl-icon cntl-center">'01</div>
 			</div>
+
+			<div class="cntl-state">
+				<div class="cntl-content">
+					<h4>Graduation</h4>
+					<p>
+						Graduated from Peking University as a Computer Science Master. I believe I had never dreamed of achieving such a goal. What my parents expected what not being a pesent anymore. Hope I exceeded their expectation.
+					</p>
+					<p>
+						Joined Schlumberger till today, maybe not the best choice for now but the best choice for that time. 
+					</p>
+				</div>
+
+				<div class="cntl-image"><img src="./images/timeline/2.png"></div>
+				<div class="cntl-icon cntl-center">'04</div>
+			</div>
+
+			<div class="cntl-state">
+				<div class="cntl-content">
+					<h4>Graduation - Again</h4>
+					<p>
+						Marvel graducated from the same department of the same university with the same degree. Not sure if she had such dreams, but she achieved what she told her parents when she was in middle school: "I will earn 10000 RMB per month when grow up." - that's almost exactly what Lucent paid her as a fresh out. She stayed there for four years before joining Yahoo!.
+					</p>
+				</div>
+
+				<div class="cntl-image"><img src="./images/timeline/3.png"></div>
+				<div class="cntl-icon cntl-center">'04</div>
+			</div>
+
+			<div class="cntl-state">
+				<div class="cntl-content">
+					<h4>Married!</h4>
+					<p>
+						We got married! A huge step forward for both of us - not alone legally:-). Not a surprise after being together for 4 years, but the decision was made by rush, right before buying the apartment. The second day, we got the certificate. No wedding, no ring, even no flower at that time, but  precious memory.
+					</p>
+					<p>
+						Very intersting, we happened to meet Marvel's room mate at the Department of Civil Affairs - she is getting married the same day!
+					</p>
+
+				</div>
+
+				<div class="cntl-image"><img src="./images/timeline/4.png"></div>
+				<div class="cntl-icon cntl-center">'05</div>
+			</div>
+
+			<div class="cntl-state">
+				<div class="cntl-content">
+					<h4>Apartment</h4>
+					<p>
+						We bought our first apartment - the one that made us married in a rush. It is cheap, far, and crude, but it belongs to us. We put high energy in decorating it, even we're quite poor with almost no deposit at their time. 
+					</p>
+					<p>
+						It's like a legend we got this apartment, which I can talk for hours. But we're lucky to have it after only one year's work, and almost all by ourselves. We lived their for 8 years, until move to a place close to office. 
+					</p>
+				</div>
+
+				<div class="cntl-image"><img src="./images/timeline/5.png"></div>
+				<div class="cntl-icon cntl-center">'05</div>
+			</div>
+			<div class="cntl-state">
+				<div class="cntl-content">
+					<h4>Baby on the way</h4>
+					<p>
+						My wife got pregnant at late 2007, and this is the picture in early 2008. Though I didn't know its a boy or a girl, I could feel the kick of my baby. We had some small accidents, and became very cautious. We talked to him/her everyday,even tried antenatal training - yet it seemed we're not very good at it. As a going-to-be father, I started preparing the names for him/her. Google, looking up in dictionary, etc. Tough decision to make, so I postponed  it to after delivery:-), except a nick name: Doudou. 
+					</p>
+					<p>
+						BTW, in my deep mind, I felt it is a girl. 
+					</p>
+				</div>
+
+				<div class="cntl-image"><img src="./images/timeline/6.png"></div>
+				<div class="cntl-icon cntl-center">'08</div>
+			</div>
+			<div class="cntl-state">
+				<div class="cntl-content">
+					<h4>It's a boy!</h4>
+					<p>
+						Yes, it's a baby boy, an Olympic baby boy! Not as I thought, but definitely what my mother expected. It was amazing moment. I hold the new born baby in arm for two hours, just looking at him, and didn't dare to breath hard. During the time, he opened his eyes, took a quick look at the excited man, and falled asleep soon. From that day, I was the least important man in the family. 
+					</p>
+					<p>
+						My wife suffered a lot in cesarean, yet I was so excited to text my friends and forgot to took the pain pills for her. Till today, she is still complaining about this:-).
+					</p>
+				</div>
+
+				<div class="cntl-image"><img src="./images/timeline/7.png"></div>
+				<div class="cntl-icon cntl-center">'08</div>
+			</div>
+			<div class="cntl-state">
+				<div class="cntl-content">
+					<h4>Kindergarden</h4>
+					<p>
+						Time flied and my Doudou was ready to kindergarden. He was quite slient and shy, but surprisingly, he got used to kindergarden life very good, almost no cry since the first day. He had a good teacher in kindergarden, and 20+ lovely friends, including a "wife" - they even had a wedding at the girl's home:-). 
+					</p>
+					<p>
+						Doudou stayed in the first kindergarden for two years and then another one for the last year. He missed his little friends, so we took him back to the first kindergarden to meet them several times.
+					</p>
+				</div>
+
+				<div class="cntl-image"><img src="./images/timeline/8.png"></div>
+				<div class="cntl-icon cntl-center">'11</div>
+			</div>
+
+			<div class="cntl-state">
+				<div class="cntl-content">
+					<h4>Primary School</h4>
+					<p>
+						Doudou entered at primary school as a real student at the age of 6 - one of the youngest in the class. The school is a very common one, but I liked it because the pressure is also low. He is doing excellent if talking about test, except for sprots - excactly like his father. I always expect Doudou to have the best childhood, yet he also takes some after-school classes, including English, Piano, Tae Kwon Do. Hope he enjoys them.  
+					</p>
+					<p>
+						Doudou growed a lot in the past year. If quoting my mother's word: "he is now a little man, not a baby boy anymore".
+					</p>	
+				</div>
+
+				<div class="cntl-image"><img src="./images/timeline/9.png"></div>
+				<div class="cntl-icon cntl-center">'14</div>
+			</div>
+
 		</div>
+	</div>
