input content for pages, initial side ready

--- a/pages/intro.html
+++ b/pages/intro.html
@@ -6,7 +6,7 @@
 	<div class="col-md-8" style="padding-right:5; padding-left:0;" >
 		<div style="border-radius: 10px/10px;background: #B9D998; height: 600px; " > 
 			<div style="padding-left: 10px; padding-right: 10px; ">
-				<h2 style="padding-top: 10px;">Welcome</h2>
+				<h3 style="padding-top: 10px;">Welcome</h3>
 				<hr style="margin-top: -5px;" />
 				<p>
 					Welcome to Zhigao's family home page!
@@ -24,7 +24,7 @@
 			</div>	
 
 			<div style="padding-left: 10px; padding-right: 10px; ">
-				<h2 style="padding-top: 10px;">What's in the site?</h2>
+				<h3 style="padding-top: 10px;">What's in the site?</h3>
 				<hr style="margin-top: -5px;" />
 				<p>
 					You'll find different things in different pages, and we expect you're interested in some of them.
@@ -47,16 +47,25 @@
 		</div>
 	</div>
 	<div class="col-md-4" style="padding-right:0; padding-left:0;" >
-		<div style="border-radius: 10px/10px;background: #B9D998; height: 295px; margin-bottom:10px" > 
+		<div style="border-radius: 10px/10px;background: #B9D998; height: 295px; margin-bottom:-10px" > 
 			<div style="padding-left: 10px; padding-right: 10px; ">
-				<h2 style="padding-top: 10px;">Coming event</h2>
+				<h3 style="padding-top: 10px;">Coming event</h3>
 				<hr style="margin-top: -5px;" />
+				<p>
+					Tour to Changbai Moutain! We've kept talking it for years, and finally have the tickets booked.
+				</p>
+
+				<img src="./images/event.png" style="display: block;width: 360px; height: 170px; margin: 0 auto">
+				
 			</div>
 		</div>
 		<div style="border-radius: 10px/10px;background: #B9D998; height: 295px;">  
 			<div style="padding-left: 10px; padding-right: 10px; ">
-				<h2 style="padding-top: 10px;">Our thoughts</h2>
+				<h3 style="padding-top: 10px;">Recent thoughts</h3>
 				<hr style="margin-top: -5px;" />
+				<p>
+					The tougher the work is, the quicker the growth will be.
+				</p>
 			</div>
 		</div>	
 	</div>
