--- a/pages/stories.html
+++ b/pages/stories.html
@@ -132,5 +132,30 @@
 				<div class="cntl-icon cntl-center">'14</div>
 			</div>
 
+			<div class="cntl-state">
+				<div class="cntl-content">
+					<h4>Tours</h4>
+					<p>
+						Since started working, we tried to travel around. The first long distance trip is to Cheng Du and Jiu Zai Gou. Really amazing tour in Jiu Zai Gou, best season and best view. In the past years, we've been to Bali, Lankawi, Hong kong, and some places in China as a famliy. As individual, our footprints include America, France and Japan. Surprisingly, Dou Dou has travelled some places that the parents had never been, like Zhang Jia Jie and Sheng Si - with his aunts. 
+					</p>
+					<p>We are not huge fan of travelling, but do get a lot of good memories on the way.</p>	
+				</div>
+
+				<div class="cntl-image"><img src="./images/timeline/life.png"></div>
+				<div class="cntl-icon cntl-center">&#x2600</div>
+			</div>
+			<div class="cntl-state">
+				<div class="cntl-content">
+					<h4>Work</h4>
+					<p>
+						I've worked for Schlumberger for 11 years - a quite unique, low-profile international oilfield service company. It gives me chances to work with people from different countries, travel around the word, and experience the life that is so different with a software person's. I appreciate the diversity of the company, which allows me to take various roles in my career, from software developer, manager, architect, and even kinda of "sales".  
+					</p>
+					<p>It's quite rare to stay in a company for that long, comparing to my classmates. But luckily, I am still doing software, with great passion in it. </p>	
+				</div>
+
+				<div class="cntl-image"><img src="./images/timeline/work.png"></div>
+				<div class="cntl-icon cntl-center">&#x2692</div>
+			</div>
+
 		</div>
 	</div>
