fullfil the textual content

--- a/pages/intro.html
+++ b/pages/intro.html
@@ -2,7 +2,7 @@
 <div class="row" style="position:relative; margin: 0 auto;">
 	<img src="../images/topbanner.png" style="width: 1200px;"></img>
 </div> 
-<div class="row" style="margin-top: 10px; margin-left: 0px; margin-right: 0px">
+<div class="row" style="margin-top: -10px; margin-left: 0px; margin-right: 0px">
 	<div class="col-md-8" style="padding-right:5; padding-left:0;" >
 		<div style="border-radius: 10px/10px;background: #B9D998; height: 600px; " > 
 			<div style="padding-left: 10px; padding-right: 10px; ">
@@ -12,11 +12,11 @@
 					Welcome to Zhigao's family home page!
 				</p>
 				<p>
-					We are the small family with three members: the father, the mother and the cutest son int he world. This site records some of the important moments of the family - something we'd like to share and would expect you to enjoy. 
+					We are the small family with three members: the father, the mother and the cutest son int the world. This site records some of the important moments of the family - something we'd like to share and expect you to enjoy. 
 				</p>
 
 				<p>
-					Hope from these site, you can get to know us, and feel our life. We're normal, just like millions of Chinease families, yet we are also unique, as the only Zhigao's family in the world.
+					Hope from this site, you can get to know us, and feel our life. We're ordinary, just like millions of Chinease families, yet we are also unique, as the only Zhigao's family in the world.
 				</p>
 				<p>
 					PS. This site achieved two of Zhigao's objectives of year 2015: 1) create a family site; 2) practice one technology learned this year - guess what technology it is:-). 
@@ -30,13 +30,13 @@
 					You'll find different things in different pages, and we expect you're interested in some of them.
 				</p>
 				<p>
-					The <a href="#">Home</a> page is what you're seeing now. Let's call it the entry of the site:-). 				
+					The <a href="#">Home</a> page is what you're viewing now. Let's call it the entry of the site. 				
 				</p>
 				<p>
-					The <a href="#/stories">Story</a> page shows our stories along the timeline. only the important moments and family milestones are shown in the page, though there are so many to be remembered. 				
+					The <a href="#/stories">Story</a> page shows our stories along the timeline. Only the important moments and family milestones are shown in the page, though there are so many to be remembered. 				
 				</p>
 				<p>
-					The <a href="#/footprint">Footprint</a> page records our footprints around the world, either as a family or as an indiviual. Travelling is something the famliy would like to do. We're trying our best to have at least one trip every year.  
+					The <a href="#/footprint">Footprint</a> page traces our footprints around the world, either as a family or as an indiviual. Travelling is something the famliy would like to do. We're trying our best to have at least one trip every year.  
 				</p>
 
 				<p>
@@ -52,7 +52,7 @@
 				<h3 style="padding-top: 10px;">Coming event</h3>
 				<hr style="margin-top: -5px;" />
 				<p>
-					Tour to Changbai Moutain! We've kept talking it for years, and finally have the tickets booked.
+					Tour to Changbai Moutain! We've kept talking about it for years, and finally have the tickets booked.
 				</p>
 
 				<img src="./images/event.png" style="display: block;width: 360px; height: 170px; margin: 0 auto">
