--- a/pages/stories.html
+++ b/pages/stories.html
@@ -8,9 +8,9 @@
 			<div class="cntl-state">
 				<div class="cntl-content">
 					<h4>We met</h4>
-					<p>We met, in year 2000. This is a trip to Wuling Mountain with the room mates. First tour we took together outside Beijing - in fact, just on the border of Beijing:-). We look so young on this old picture!</p>
+					<p>We met, in year 2000. This was a trip to Wuling Mountain with the room mates. First tour we took together outside Beijing - in fact, just on the border of Beijing:-). We look so young on this old picture!</p>
 					<p>
-						The same year, we had a trip to Cheng De, too. This is the farest place I've been as tourist during my Bechelor time.
+						The same year, we had a trip to Cheng De. This is the farest place I'd been as tourist during my Bechelor time.
 					</p>
 				</div>
 				<div class="cntl-image"><img src="./images/timeline/1.png"></div>
@@ -21,10 +21,10 @@
 				<div class="cntl-content">
 					<h4>Graduation</h4>
 					<p>
-						Graduated from Peking University as a Computer Science Master. I believe I had never dreamed of achieving such a goal. What my parents expected what not being a pesent anymore. Hope I exceeded their expectation.
+						Graduated from Peking University as a Computer Science Master. I had never dreamed of achieving such a goal. What my parents expected was not being a pesent generation. Hope I exceeded their expectation.
 					</p>
 					<p>
-						Joined Schlumberger till today, maybe not the best choice for now but the best choice for that time. 
+						Joined Schlumberger after that and till today, maybe not the best choice for now but the best choice for that time. 
 					</p>
 				</div>
 
@@ -36,7 +36,7 @@
 				<div class="cntl-content">
 					<h4>Graduation - Again</h4>
 					<p>
-						Marvel graducated from the same department of the same university with the same degree. Not sure if she had such dreams, but she achieved what she told her parents when she was in middle school: "I will earn 10000 RMB per month when grow up." - that's almost exactly what Lucent paid her as a fresh out. She stayed there for four years before joining Yahoo!.
+						Marvel graducated from the same department of the same university with the same degree. Not sure if she had dream to be a member of best university, but she achieved what she told her parents when she was in middle school: "I will earn 10000 RMB per month when grow up." - that's almost exactly what Lucent paid her as a fresh out. She stayed there for four years before joining Yahoo!.
 					</p>
 				</div>
 
@@ -48,7 +48,7 @@
 				<div class="cntl-content">
 					<h4>Married!</h4>
 					<p>
-						We got married! A huge step forward for both of us - not alone legally:-). Not a surprise after being together for 4 years, but the decision was made by rush, right before buying the apartment. The second day, we got the certificate. No wedding, no ring, even no flower at that time, but  precious memory.
+						We got married! A huge step forward for both of us - not alone legally:-). Not a surprise after being together for 4 years, but the decision was made by rush, right before buying the apartment. The second day, we got the certificate. No wedding, no ring, even no flower at that time, but precious memory.
 					</p>
 					<p>
 						Very intersting, we happened to meet Marvel's room mate at the Department of Civil Affairs - she is getting married the same day!
@@ -64,10 +64,10 @@
 				<div class="cntl-content">
 					<h4>Apartment</h4>
 					<p>
-						We bought our first apartment - the one that made us married in a rush. It is cheap, far, and crude, but it belongs to us. We put high energy in decorating it, even we're quite poor with almost no deposit at their time. 
+						We bought our first apartment - the one that made us married in a rush. It was cheap, far, and crude, but it belongs to us. We put high energy in decorating it, even we're quite poor with almost no deposit at their time. 
 					</p>
 					<p>
-						It's like a legend we got this apartment, which I can talk for hours. But we're lucky to have it after only one year's work, and almost all by ourselves. We lived their for 8 years, until move to a place close to office. 
+						It's like a legend how we got this apartment, which I could talk for hours. But we're lucky to have it after only one year's work, and almost all by ourselves. We lived their for 8 years, until move to a place close to office. 
 					</p>
 				</div>
 
@@ -78,7 +78,7 @@
 				<div class="cntl-content">
 					<h4>Baby on the way</h4>
 					<p>
-						My wife got pregnant at late 2007, and this is the picture in early 2008. Though I didn't know its a boy or a girl, I could feel the kick of my baby. We had some small accidents, and became very cautious. We talked to him/her everyday,even tried antenatal training - yet it seemed we're not very good at it. As a going-to-be father, I started preparing the names for him/her. Google, looking up in dictionary, etc. Tough decision to make, so I postponed  it to after delivery:-), except a nick name: Doudou. 
+						My wife got pregnant at late 2007, and this was the picture in early 2008. Though I didn't know its a boy or a girl, I could feel the kick of my baby. We had some small accidents, and became very cautious. We talked to him/her everyday,even tried antenatal training - yet it seemed we're not very good at it. As a going-to-be father, I started preparing the names for him/her. Google, looking up in dictionary, etc. Tough decision to make, so I postponed  it to after delivery:-), except a nick name: Doudou. 
 					</p>
 					<p>
 						BTW, in my deep mind, I felt it is a girl. 
@@ -106,7 +106,7 @@
 				<div class="cntl-content">
 					<h4>Kindergarden</h4>
 					<p>
-						Time flied and my Doudou was ready to kindergarden. He was quite slient and shy, but surprisingly, he got used to kindergarden life very good, almost no cry since the first day. He had a good teacher in kindergarden, and 20+ lovely friends, including a "wife" - they even had a wedding at the girl's home:-). 
+						Time flied and my Doudou was ready to kindergarden. He was quite slient and shy, but surprisingly, he got used to kindergarden life very well, almost no cry since the first day. He had a good teacher in kindergarden, and 20+ lovely friends, including a "wife" - they even had a wedding at the girl's home:-). 
 					</p>
 					<p>
 						Doudou stayed in the first kindergarden for two years and then another one for the last year. He missed his little friends, so we took him back to the first kindergarden to meet them several times.
@@ -121,7 +121,7 @@
 				<div class="cntl-content">
 					<h4>Primary School</h4>
 					<p>
-						Doudou entered at primary school as a real student at the age of 6 - one of the youngest in the class. The school is a very common one, but I liked it because the pressure is also low. He is doing excellent if talking about test, except for sprots - excactly like his father. I always expect Doudou to have the best childhood, yet he also takes some after-school classes, including English, Piano, Tae Kwon Do. Hope he enjoys them.  
+						Doudou entered  primary school as a real student at the age of 6 - one of the youngest in the class. The school is a very ordinary one, but I liked it because the pressure is also low. He is doing excellent if talking about test, except for sprots - excactly likes his father. We always expect Doudou to have the best childhood, yet still force him to take some after-school classes, including English, Piano, Tae Kwon Do, etc. Hope he enjoys them.  
 					</p>
 					<p>
 						Doudou growed a lot in the past year. If quoting my mother's word: "he is now a little man, not a baby boy anymore".
@@ -136,7 +136,7 @@
 				<div class="cntl-content">
 					<h4>Tours</h4>
 					<p>
-						Since started working, we tried to travel around. The first long distance trip is to Cheng Du and Jiu Zai Gou. Really amazing tour in Jiu Zai Gou, best season and best view. In the past years, we've been to Bali, Lankawi, Hong kong, and some places in China as a famliy. As individual, our footprints include America, France and Japan. Surprisingly, Dou Dou has travelled some places that the parents had never been, like Zhang Jia Jie and Sheng Si - with his aunts. 
+						After graducation, we tried to travel around (yes, we have money for travel now:-)). The first long distance trip is to Cheng Du and Jiu Zai Gou. Really amazing tour in Jiu Zai Gou, best season and best scene. In the past years, we've been to Bali, Lankawi, Hong kong, and some places in China as a famliy. As individual, our footprints include America, France and Japan. Surprisingly, Dou Dou has travelled some places that the parents had never been, like Zhang Jia Jie and Sheng Si - with his aunts. 
 					</p>
 					<p>We are not huge fan of travelling, but do get a lot of good memories on the way.</p>	
 				</div>
@@ -148,7 +148,7 @@
 				<div class="cntl-content">
 					<h4>Work</h4>
 					<p>
-						I've worked for Schlumberger for 11 years - a quite unique, low-profile international oilfield service company. It gives me chances to work with people from different countries, travel around the word, and experience the life that is so different with a software person's. I appreciate the diversity of the company, which allows me to take various roles in my career, from software developer, manager, architect, and even kinda of "sales".  
+						I've worked for Schlumberger for 11 years - a quite unique, low-profile international oilfield service company. It gives me chances to work with people from different countries, travel around the word, and experience the life that is so different with a software person's. I appreciate the diversity of the company, which allows me to take various roles in my career, from software developer, manager, architect, to even kinda of "sales".  
 					</p>
 					<p>It's quite rare to stay in a company for that long, comparing to my classmates. But luckily, I am still doing software, with great passion in it. </p>	
 				</div>
